<resources>
    <string name="app_name">ecoOil</string>
    <string name="quote">bringing affordable and high-quality fuel products to every Filipino.</string>
    <string name="deposit_balance">Balance</string>
    <string name="email">Email</string>
    <string name="email2">Email/Username</string>
    <string name="d_amount">amount</string>
    <string name="d_message">message(optional)</string>
    <string name="d_confirm">confirm</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome!</string>
    <string name="create">CREATE ACCOUNT</string>
    <string name="password">Password</string>
    <string name="remember">Remember me?</string>
    <string name="credit">•••• •••• •••• ••••</string>
    <string name="c_name">ABCDEFG H. IJKL</string>
    <string name="amount_balance">4000.00pts</string>
    <string name="p_profile">Profile</string>
    <string name="p_name">ABCDEFG H. IJKL</string>
    <string name="userID">User ID</string>
    <string name="p_number2">•••• •••• •••• ••••</string>
    <string name="p_email">Email address</string>
    <string name="p_email2">abcdefgh@gmail.com</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="c_credit">Tracker</string>
    <string name="c_recent">Recent transactions</string>
    <string name="stations">Nearest Stations</string>
    <string name="forgot">forgot password?</string>
    <string name="OTP">GET OTP</string>
    <string name="OTP2">OTP</string>
    <string name="reset">reset password</string>
    <string name="register">REGISTER</string>
    <string name="h_address">\n<u>Building E Phoenix Sun Business Park 86 Eulogio Rodriguez Jr. Avenue Bagumbayan, Quezon City 1109 Metro Manila</u></string>
    <string name="h_address2"><strong>Address:</strong></string>
    <string name="h_phone"><u>09493473888</u></string>
    <string name="h_phone2"><strong>Phone:</strong></string>
    <string name="h_email"><u>marketing@ecology.com.ph</u></string>
    <string name="h_email2"><strong>Email:</strong></string>
    <string name="about">Who we are..</string>
    <string name="about2"><b>Ecology Energy Corporation</b> is a Filipino-owned company that started in 1995 engaging in manufacturing of multi-purpose and specialized greases and bitumen-based products for the automotive, industrial, and construction industry. Additionally, it is also engaged in petroleum waste management.</string>
    <string name="about3"><b>Our Mission</b>\n\n EcoOil aims to Fuel The Filipino Drive by uplifting the Filipino spirit through its core values: reliability, quality-service and safety.\n\n We aim to raise industry standards by fostering livelihood through attainable offerings and promotions.\n\n <b>Our Vision</b>\n\n To be the top Filipino-owned petroleum retail brand in the Philippines.</string>
    <string name="link"><![CDATA[<<click link to redirect>>]]></string>
    <string name="help">HELP</string>
    <string name="abouts">About</string>
    <string name="about_eco">In 2016, Ecology Energy entered the downstream petroleum industry with its retail network across the country, wholesale business serving both commercial and industrial customers and a fuel importation terminal. Ecology Energy Corporation also owns subsidiaries handling end-to-end support services for its main business, including a Singapore-based fuel trading, road transport, marine transport, industrial and non-life insurance. With its highly competent leadership and strategic logistical alliances providing access to fuel depots around the country and its highly integrated logistics capability to support its fast-growing retail network and commercial sales Ecology Energy is poised to become one of the major independent oil companies in the Philippines.</string>
    <string name="qr">Generate QR code</string>
    <string name="user_id">User ID:</string>
    <string name="regenerate_qr_code">Regenerate QR Code</string>
    <string name="eco_diesel">Eco DIESEL</string>
    <string name="diesel_price"> </string>
    <string name="eco_gasoline">Eco GASOLINE</string>
    <string name="gasoline_price"> </string>
    <string name="refresh_location">Refresh Location</string>
    <string name="send">send</string>
    <string name="go_to_admin_prices">Go to Admin Prices</string>
    <string name="go_back_to_admin_points">GO BACK TO ADMIN POINTS</string>
    <string name="balance">Balance</string>
    <string name="find_nearest_station">Find Nearest Station</string>
    <string name="search_for_a_station">Search for a station</string>
    <string name="exit"><u>EXIT</u></string>
    <string name="description_of_the_reward_goes_here">Description of the reward goes here.</string>
    <string name="_50_points">50 Points</string>
    <string name="reward_title">Reward Title</string>
    <string name="rewards">Rewards</string>
    <string name="available_rewards">Available Rewards</string>
    <string name="you_have_0_points">You have 0 Points</string>

</resources>