<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="6dp"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Reward Title -->
        <TextView
            android:id="@+id/reward_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reward_title"
            android:fontFamily="@font/akshar_medium"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="2dp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/darkgrey"/>

        <!-- Reward Description -->
        <TextView
            android:id="@+id/reward_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description_of_the_reward_goes_here"
            android:fontFamily="@font/akshar_medium"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="5dp" />

        <!-- Reward Points -->
        <TextView
            android:id="@+id/reward_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/_50_points"
            android:fontFamily="@font/akshar_medium"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:paddingTop="5dp"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>
