<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Rewards"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Rewards Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rewards"
            android:fontFamily="@font/akshar_medium"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textAlignment="center" />

        <!-- User Points Display (Without CardView) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/reward_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_have_0_points"
                android:textColor="@color/black"
                android:fontFamily="@font/akshar_medium"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"/>
        </LinearLayout>

        <!-- Available Rewards Title -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/available_rewards"
            android:fontFamily="@font/akshar_medium"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="30dp" />

        <!-- ListView to Display Rewards -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rewards_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
