<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".About">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp">
            <ImageButton
                android:id="@+id/back"
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/back"
                android:paddingTop="20dp"
                android:background="@color/trans"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/akshar_medium"
                android:textSize="40dp"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:paddingTop="20dp"
                android:paddingRight="40dp"
                android:text="About us"
                android:layout_weight="1"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/akshar_medium"
            android:textColor="#001F5B"
            android:textSize="30dp"
            android:layout_margin="10dp"
            android:text="@string/about"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_margin="5dp"
            android:src="@drawable/about_photo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/akshar_medium"
            android:text="@string/about2"
            android:textAlignment="gravity"
            android:textColor="@color/black"
            android:textSize="17sp" />
        <TextView
            android:layout_marginTop="10dp"
            android:background="#001F5B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about3"
            android:fontFamily="@font/akshar_medium"
            android:textColor="@color/white"
            android:padding="15dp"/>
    </LinearLayout>


</ScrollView>